--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:name=".TimeServerApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:allowBackup="true"
         android:supportsRtl="true">
 
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
@@ -23,21 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
-        <activity
-            android:name=".activity.SatelliteActivity"
-            android:screenOrientation="portrait">
-        </activity>
-
-        <activity
-            android:name=".activity.ServerActivity"
-            android:screenOrientation="portrait">
-        </activity>
-
-        <activity
-            android:name=".activity.InfoActivity"
-            android:screenOrientation="portrait">
-        </activity>
     </application>
 
 </manifest>
