--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,10 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "android.arch.lifecycle:runtime:1.0.3"
     implementation "android.arch.lifecycle:extensions:1.0.0"
 
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
-    implementation "com.android.support:cardview-v7:${rootProject.ext.supportLibraryVersion}"
     implementation "com.android.support:design:${rootProject.ext.supportLibraryVersion}"
     implementation "com.android.support:support-fragment:${rootProject.ext.supportLibraryVersion}"
     implementation "com.android.support:support-v4:${rootProject.ext.supportLibraryVersion}"
@@ -53,7 +53,9 @@ dependencies {
 
     implementation "com.google.dagger:dagger-android:${daggerVersion}"
     implementation "com.google.dagger:dagger-android-support:${daggerVersion}"
+    implementation "com.google.guava:guava:23.6-android"
 
+    implementation "com.github.PhilJay:MPAndroidChart:v3.0.3"
     implementation "com.jakewharton:butterknife:${butterknifeVersion}"
     implementation "com.jakewharton.timber:timber:4.6.0"
 
