satellite positioning chart works and displays all positions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 ext {
