--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".TimeServerApplication"
@@ -29,8 +30,7 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <service android:name=".service.GNSSMessageService" android:process=":publicntp_gnssservice" />
-        <service android:name=".service.NTPServerService" android:process=":publicntp_ntpservice" />
+        <service android:name=".service.ntp.NtpService" />
     </application>
 
 </manifest>
