--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,31 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.MainActivity"
-            android:screenOrientation="portrait">
-
+            android:name=".ui.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.MainActivity"
+            android:screenOrientation="portrait">
 
         </activity>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <receiver
+            android:name=".service.ntp.KillServiceReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="KILL_NTP_SERVICE" />
+            </intent-filter>
+        </receiver>
 
         <service android:name=".service.ntp.NtpService" />
     </application>
