--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.application'
 
 android {
@@ -72,6 +71,8 @@ dependencies {
     implementation "com.github.PhilJay:MPAndroidChart:v3.0.3"
     implementation "com.jakewharton:butterknife:${butterknifeVersion}"
     implementation "com.jakewharton.timber:timber:4.6.0"
+
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
 
     androidTestImplementation "com.android.support.test:runner:1.0.1"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.1"
