--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
 
+    compile 'eu.chainfire:libsuperuser:1.0.0.+'
+
     androidTestImplementation "com.android.support.test:runner:1.0.1"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.1"
     testImplementation "junit:junit:4.12"
