--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,19 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".service.ntp.NtpService" />
+        <receiver
+            android:name=".service.ntp.ServerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="START_NTP_SERVICE" />
+                <action android:name="UPDATE_NTP_SERVICE" />                
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".service.ntp.NtpService"
+          android:enabled="true"
+          android:exported="true"
+        />
     </application>
 
 </manifest>
