--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,13 +48,14 @@
 
         <receiver
             android:name=".service.ntp.ServerActivity"
-            android:exported="true">
+            android:exported="true"
+            android:enabled="true"
+          >
             <intent-filter>
                 <action android:name="START_NTP_SERVICE" />
-                <action android:name="UPDATE_NTP_SERVICE" />                
+                <action android:name="RESTART_NTP_SERVICE" />
             </intent-filter>
         </receiver>
-
         <service android:name=".service.ntp.NtpService"
           android:enabled="true"
           android:exported="true"
