--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    compileSdkVersion rootProject.ext.compileSdkVersion
-
-    configurations.all {
+    configurations.configureEach {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 
@@ -25,6 +23,7 @@ android {
 
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        compileSdk rootProject.ext.compileSdkVersion
 
         versionCode 10
         versionName "1.0.30"
@@ -56,8 +55,8 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "android.arch.lifecycle:runtime:1.1.0"
-    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:runtime:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
     implementation "com.android.support:design:${rootProject.ext.supportLibraryVersion}"
@@ -72,12 +71,12 @@ dependencies {
     implementation "com.jakewharton:butterknife:${butterknifeVersion}"
     implementation "com.jakewharton.timber:timber:4.6.0"
 
-    api 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
+    api 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'
     api 'com.github.lecho:hellocharts-library:1.5.8@aar'
 
     api 'eu.chainfire:libsuperuser:1.0.0.+'
 
-    androidTestImplementation "com.android.support.test:runner:1.0.1"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.1"
-    testImplementation "junit:junit:4.12"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    testImplementation "junit:junit:4.13.2"
 }
